--- a/practice_code/z4_1.FewShot_answer_example.ipynb
+++ b/practice_code/z4_1.FewShot_answer_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "AIMessageChunk(content='I know this:,\\n                There are two Koreas - North Korea and South Korea,\\n                Capital of South Korea: Seoul,\\n                Language: Korean,\\n                Food: Kimchi and Bibimbap,\\n                Currency: South Korean Won.')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,10 +48,10 @@
     "#t = PromptTemplate.from_template(\"What is the captial of {country}?\")\n",
     "#t.fromat(country=\"France\")\n",
     "\n",
-    "t = PromptTemplate(\n",
-    "    template = \"What is the captial of {country}?\",\n",
-    "    input_variables = [\"country\"],\n",
-    ")\n",
+    "# t = PromptTemplate(\n",
+    "#     template = \"What is the captial of {country}?\",\n",
+    "#     input_variables = [\"country\"],\n",
+    "# )\n",
     "#t.format(country=\"France\")\n",
     " \n",
     "\n",
@@ -88,10 +88,10 @@
     "]\n",
     "\n",
     "\n",
-    "example_template = \"\"\"\n",
-    "    Human: {question}\n",
-    "    AI: {answer}\n",
-    "\"\"\"\n",
+    "# example_template = \"\"\"\n",
+    "#     Human: {question}\n",
+    "#     AI: {answer}\n",
+    "# \"\"\"\n",
     "\n",
     "#example_prompt = PromptTemplate.from_template(\"Human : {question} \\n AI : {answer}\")\n",
     "\n",
@@ -100,6 +100,7 @@
     "    (\"ai\", \"{answer}\"),\n",
     "])\n",
     "\n",
+    "#Langchain이 example을 학습\n",
     "example_prompt = FewShotChatMessagePromptTemplate(\n",
     "    example_prompt=example_prompt,\n",
     "    examples = examples,\n",
