--- a/practice_code/z4_2.example_selector.ipynb
+++ b/practice_code/z4_2.example_selector.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Human: Greece?\\nAI:\\n                I know this: ,\\n                Capital: Athens,\\n                Language: Greek,\\n                Food: Souvlaki and Feta Cheese,\\n                Currency: Euro,\\n                \\n\\nHuman: What do you know about Brazil?'"
+       "'Human: France?\\nAI:\\n                Here is what I know:,\\n                Capital: Paris,\\n                Language: French,\\n                Food: Wine and Cheese,\\n                Currency: Euro,\\n                \\n\\nHuman: What do you know about Brazil?'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,8 +22,10 @@
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "from langchain.prompts.prompt import PromptTemplate\n",
     "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
+    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
     "\n",
     "\n",
+    "#length와 달리 랜덤으로 예제를 선택함   \n",
     "class RandomExampleSelector(BaseExampleSelector):\n",
     "    def __init__(self, examples):\n",
     "        self.examples = examples\n",
@@ -78,6 +80,15 @@
     "]\n",
     "\n",
     "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI:{answer}\")\n",
+    "\n",
+    "# example_selector = LengthBasedExampleSelector( \n",
+    "#     examples = examples,\n",
+    "#     example_prompt = example_prompt,\n",
+    "#     #예제의 갯수를 제한해서 돈을 절약할 수 있음\n",
+    "#     max_length = 500,\n",
+    "# )\n",
+    "\n",
+    "\n",
     "\n",
     "example_selector = RandomExampleSelector(\n",
     "    examples = examples,\n",
