--- a/practice_code/z5_1.memoryBuffer_addMessage.ipynb
+++ b/practice_code/z5_1.memoryBuffer_addMessage.ipynb
@@ -2,18 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content='3'),\n",
+       "  AIMessage(content='3'),\n",
+       "  HumanMessage(content='4'),\n",
+       "  AIMessage(content='4'),\n",
+       "  HumanMessage(content='5'),\n",
+       "  AIMessage(content='5'),\n",
+       "  HumanMessage(content='6'),\n",
+       "  AIMessage(content='6')]}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "\n",
     "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
     "llm=ChatOpenAI(temperature = 0.1)\n",
     "\n",
-    "\n",
-    "# it saved not everything but a summary.\n",
-    "memory = ConversationSummaryBufferMemory(llm=llm, max_token_limit=50,return_messages=True,)\n",
+    "#k 는 몇개의 인터렉션을 저장할지를 의미한다.\n",
+    "memory = ConversationBufferWindowMemory(llm=llm, k=4, return_messages=True,)\n",
     "\n",
     "def add_message(input, output):\n",
     "    memory.save_context({\"input\":input},{\"output\":output})\n",
@@ -21,12 +40,31 @@
     "def get_history():\n",
     "    return memory.load_memory_variables({})\n",
     "\n",
-    "add_message(\"Hi I'm Nicolas, I live in Korea\",\"wow that is so cool!\")\n"
+    "add_message(1,1)\n",
+    "add_message(2,2)\n",
+    "add_message(3,3)\n",
+    "add_message(4,4)\n",
+    "add_message(5,5)\n",
+    "add_message(6,6)\n",
+    "\n",
+    "get_history()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# it saved not everything but a summary.\n",
+    "memory = ConversationSummaryBufferMemory(llm=llm, max_token_limit=50,return_messages=True,)\n",
+    "\n",
+    "add_message(\"Hi I'm Nicolas, I live in Korea\",\"wow that is so cool!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [SystemMessage(content=\"Nicolas introduces himself as living in Korea. The AI responds with enthusiasm, finding it cool and expressing a desire to visit. The human mentions Korea's beauty and asks about the distance from Argentina.\"),\n",
+       "{'history': [SystemMessage(content='Nicolas introduces himself as living in Korea. The AI responds with enthusiasm, finding it cool and expressing a desire to visit. The human mentions how pretty Korea is and asks about the distance from Argentina.'),\n",
        "  AIMessage(content=\"I don't know! Super far!!\"),\n",
        "  HumanMessage(content='How far is Korea from Brazil?'),\n",
        "  AIMessage(content=\"I don't know! Super far!!\")]}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
