--- a/practice_code/z5_6.memory_Runnablepassthrough.ipynb
+++ b/practice_code/z5_6.memory_Runnablepassthrough.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,17 @@
     "    ]\n",
     ")\n",
     "\n",
+    "#이거 계속 add해서 불러오기 귀찮으니 RunablePassthrough로 만들어서 불러오자\n",
+    "#Load the chat history from memory\n",
+    "#chain.invoke({\n",
+    "#    \"chat_history\":memory.load_memory_variables({})[\"chat_history\"],\n",
+    "#    \"question\":\"Hello, how are you?\"\n",
+    "#})\n",
+    "\n",
+    "\n",
     "def load_memory(input):\n",
     "    #print(input)\n",
+    "    #print(\"***************\")\n",
     "    return memory.load_memory_variables({})[\"chat_history\"]\n",
     "\n",
     "chain = RunnablePassthrough.assign(chat_history=load_memory) | prompt | llm\n",
@@ -47,19 +56,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Hello Yoon! How can I assist you today?'\n"
+      "content='Nice to meet you, Yoon! How can I assist you today?'\n"
      ]
     }
    ],
    "source": [
     "invoke_chain(\"My name is Yoon\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Your name is Yoon.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "#대화내용이 저장되있는것을 확인할수있는 대답을함\n",
+    "invoke_chain(\"What is my name?\")"
    ]
   }
  ],
