--- a/practice_code/z6_2.embedding.ipynb
+++ b/practice_code/z6_2.embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,6 +21,9 @@
     "from langchain.vectorstores import Chroma\n",
     "from langchain.storage import LocalFileStore\n",
     "\n",
+    "\n",
+    "#어떤 문장을 vector화 해서 embedding하는 것이 돈이 들어감\n",
+    "#그래서 여러번 사용할 때는 cache를 이용해서 저장해놓고 사용하는 것이 좋음\n",
     "cache_dir = LocalFileStore(\"../.cache/\")\n",
     "\n",
     "\n",
@@ -35,11 +38,22 @@
     "\n",
     "embeddings = OpenAIEmbeddings()\n",
     "\n",
+    "#Hi 에 해당하는 벡터를 알려줌\n",
+    "#embeddings.embed_query(\"Hi\")\n",
+    "\n",
+    "\n",
+    "#cache에 저장된 것을 불러옴\n",
     "cached_embeddings = CacheBackedEmbeddings.from_bytes_store(embeddings, cache_dir)\n",
     "\n",
+    "\n",
+    "#docs를 바로 Embedding으로 변환\n",
+    "#vectorstore = Chroma.from_documents(docs, embeddings)\n",
+    "\n",
+    "# cached가 있으면 바로 쓰고 없으면 새로 embedding해서 저장\n",
     "vectorstore = Chroma.from_documents(docs, cached_embeddings)\n",
     "\n",
-    "\n",
+    "#방금 VecotrStore로 변환한 것에서 검색\n",
+    "vectorstore.similarity_search(\"Hi\")\n",
     "\n",
     "\n",
     "# embedder = OpenAIEmbeddings()\n",
