--- a/practice_code/z6_3.RetrievalQA.ipynb
+++ b/practice_code/z6_3.RetrievalQA.ipynb
@@ -57,7 +57,7 @@
     "#vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
     "vectorstore = Chroma.from_documents(docs, cached_embeddings)\n",
     "\n",
-    "\n",
+    "#Retrieval은 단순 찾기(similarity_search)와 달리 계속 정제되어 나간다 1부 요약 2부 전달혼합 3부 전달 이런식\n",
     "cahin = RetrievalQA.from_chain_type(\n",
     "    llm = llm,\n",
     "    #chain_type = \"refine\",\n",
