--- a/practice_code/z3_2.message.ipynb
+++ b/practice_code/z3_2.message.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +18,10 @@
     {
      "data": {
       "text/plain": [
-       "'The distance between France and Germany varies depending on the specific locations being compared. The straight-line distance between Paris, France and Berlin, Germany is approximately 876 kilometers (544 miles). However, the driving distance between the two countries can be longer, depending on the route taken and any border crossings.'"
+       "'The distance between France and Germany varies depending on the specific locations being compared. The straight-line distance between Paris, France and Berlin, Germany is approximately 876 kilometers (544 miles). However, the driving distance between the two countries can be longer due to the road network and border crossings.'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "AIMessage(content='Γεια σας! Η απόσταση μεταξύ Γαλλίας και Γερμανίας είναι περίπου 500 χιλιόμετρα. Το όνομά μου είναι Αθηνά. Πώς μπορώ να βοηθήσω;')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Mi dispiace, non posso calcolare la distanza tra due paesi in questo momento. Il mio nome è {name}. Posso aiutarti con altre domande geografiche?')"
+       "AIMessage(content='Mi dispiace, non posso fornire informazioni sulla distanza tra due paesi specifici. Il mio nome è {name}. Come posso aiutarti oggi?')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "['Hello', 'how', 'are', 'you']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "['mercury', 'venus', 'earth', 'mars', 'jupiter', 'saturn', 'uranus', 'neptune']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "['pikachu', 'charmander', 'bulbasaur', 'squirtle', 'jigglypuff']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
