--- a/practice_code/z3_4.load_prompt.ipynb
+++ b/practice_code/z3_4.load_prompt.ipynb
@@ -30,6 +30,8 @@
     "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
     "\n",
     "\n",
+    "#컨셉은 prompt가 크고 복잡해서 불러와서 사용하는 방식\n",
+    "\n",
     "prompt = load_prompt(\"./prompt.yaml\")\n",
     "\n",
     "chat = ChatOpenAI(\n",
