--- a/practice_code/z5_5.verobose_show_prompt_log.ipynb
+++ b/practice_code/z5_5.verobose_show_prompt_log.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,10 +22,10 @@
     {
      "data": {
       "text/plain": [
-       "'Nice to meet you, Nico! How can I assist you today?'"
+       "'Hello Nico! How can I assist you today?'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,6 +38,8 @@
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
+    "#token 한도에 도달하면 과거의 것들을 요약함 니콜라는 SummaryBuffer를 추천\n",
+    "#memory_key =\"chat_history\"는 이전 대화를 prompt메모리에 log 보여주기위해 할당\n",
     "memory = ConversationSummaryBufferMemory(\n",
     "    llm=llm,\n",
     "    max_token_limit=120,\n",
@@ -54,6 +56,7 @@
     "    ]\n",
     ")\n",
     "\n",
+    "#verbose를 키면 중간 값들을 출력 따라갈수있게해줌\n",
     "chain = LLMChain(\n",
     "    llm=llm,\n",
     "    memory=memory,\n",
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +82,7 @@
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
       "Human: My name is Nico\n",
-      "AI: Nice to meet you, Nico! How can I assist you today?\n",
+      "AI: Hello Nico! How can I assist you today?\n",
       "Human: I live in Seoul\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
@@ -91,7 +94,7 @@
        "'Seoul is a vibrant city with a rich history and culture. Is there anything specific you would like to know or discuss about Seoul?'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -115,9 +118,9 @@
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
       "Human: My name is Nico\n",
-      "AI: Nice to meet you, Nico! How can I assist you today?\n",
+      "AI: Hello Nico! How can I assist you today?\n",
       "Human: I live in Seoul\n",
-      "AI: Seoul is a vibrant city with a rich history and culture. Is there anything specific you would like to know or discuss about Seoul?\n",
+      "AI: Seoul is a vibrant city with a rich history and culture. Is there anything specific you would like to know or talk about regarding Seoul?\n",
       "Human: What is my name?\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
@@ -129,7 +132,7 @@
        "'Your name is Nico.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,18 +145,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [SystemMessage(content='On Nicolas: Nicolas lives in South Korea. Nicolas likes kimchi.')]}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
